补充便携版字符集模块支持